--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="yvpzfnxTlqaMnZBD8yYN1DYsjW_UGUpWYIWMGHgY59o" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="google-site-verification" content="yvpzfnxTlqaMnZBD8yYN1DYsjW_UGUpWYIWMGHgY59o" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Check the latest Blox Fruits values, trading tips, and fruit rarity rankings. Stay updated with the best Blox Fruits deals and trades!,Blox Fruits Values - The most trusted and updated trading value list for Blox Fruits. Use our trade calculator, stock reset countdown, and rarity rankings to maximize your trades!" />
+    <meta name="keywords" content="Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits best fruits, Roblox trading, fruit values, Blox Fruits tier list" />
+    <meta name="author" content="Blox Fruits Values Team" />
+
+    <!-- Open Graph (OG) Meta Tags for Social Media -->
+    <meta property="og:title" content="Blox Fruits Values & Trading Guide" />
+    <meta property="og:description" content="Get the latest Blox Fruits values, fruit rarity rankings, and trading tips. Maximize your trades and find the best deals!" />
+    <meta property="og:image" content="/bloxfruits-banner.jpg" />
+    <meta property="og:url" content="https://bloxfruitsvalue.netlify.app/" />
+    <meta property="og:type" content="bloxfruitsvalues.com" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Blox Fruits Values & Trading Guide" />
+    <meta name="twitter:description" content="Check out the best Blox Fruits values, trading tips, and fruit tier lists. Never miss a great trade!" />
+    <meta name="twitter:image" content="/bloxfruits-banner.jpg" />
+
+    <title>Blox Fruits Values & Trading Guide</title>
+    <link rel="icon" type="image/png" href="/bloxfruits-banner.jpg" />
+    <div style="text-align: center; margin-top: 20px;">
+      <img src="/bloxfruits-banner.jpg" alt="Google Chrome Logo" width="100" />
+    </div>
   </head>
   <body>
     <div id="root"></div>
