--- a/index.html
+++ b/index.html
@@ -1,19 +1,92 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="RutARC2gS8iAQgjPejBajdoOSI2tNkymLxfpSSqeZro" />
     <meta name="google-site-verification" content="yvpzfnxTlqaMnZBD8yYN1DYsjW_UGUpWYIWMGHgY59o" />
     <meta charset="UTF-8" />
     <meta name="google-site-verification" content="yvpzfnxTlqaMnZBD8yYN1DYsjW_UGUpWYIWMGHgY59o" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Check the latest Blox Fruits values, trading tips, and fruit rarity rankings. Stay updated with the best Blox Fruits deals and trades!,Blox Fruits Values - The most trusted and updated trading value list for Blox Fruits. Use our trade calculator, stock reset countdown, and rarity rankings to maximize your trades!" />
-    <meta name="keywords" content="Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits best fruits, Roblox trading, fruit values, Blox Fruits tier list" />
+    <meta name="description" content="Check the latest Blox Fruits values, trading tips, and fruit rarity rankings. Stay updated with the best Blox Fruits deals and trades!, Blox Fruits Values - The most trusted and updated trading value list for Blox Fruits. Use our trade calculator, stock reset countdown, and rarity rankings to maximize your trades!" />
+    <meta name="description" content="Discover accurate Blox Fruits trading values and tier lists. Stay ahead with the latest updates, rarity rankings, and stock reset times!" />
+    <meta name="description" content="Blox Fruits Values – Get the most trusted trading values, fruit rarity rankings, and pro tips to maximize your in-game profits!" />
+    <meta name="description" content="Stay updated with real-time Blox Fruits fruit values, trade tips, and the latest market trends. Get the best deals in trading!" />
+    <meta name="description" content="Blox Fruits Trading Guide – Learn how to trade smartly using our updated value list, stock reset countdown, and trading strategies!" />
+    <meta name="description" content="Maximize your Blox Fruits trades with accurate fruit values, a stock reset timer, and tier lists. Stay ahead of the market!" />
+    <meta name="description" content="Check out the best Blox Fruits trading values and price trends. Avoid bad deals and make smart trades today!" />
+    <meta name="description" content="Blox Fruits tier list and trading values – Your go-to guide for finding the best fruit deals and making smart trading decisions!" />
+    <meta name="description" content="Track Blox Fruits fruit prices, stock resets, and trade values in real-time. Make profitable trades with our trusted value list!" />
+    <meta name="description" content="Blox Fruits Values – Find out which fruits are worth the most and trade with confidence using our updated price guide!" />
+    <meta name="description" content="Looking for the best trades in Blox Fruits? Our updated fruit value list and rarity rankings help you get the best deals!" />
+    <meta name="description" content="Blox Fruits price guide – Compare fruit values, rarity, and stock resets to make profitable trades every time!" />
+    <meta name="description" content="Find the latest Blox Fruits values, tier lists, and expert trading advice. Get the best deals and avoid overpaying!" />
+    <meta name="description" content="Get the best Blox Fruits trades! Use our real-time value tracker, trade calculator, and fruit tier list to make smart decisions!" />
+    <meta name="description" content="The ultimate Blox Fruits trading hub! Track fruit values, stock reset times, and rarity rankings for optimal trades!" />
+    <meta name="description" content="Blox Fruits Trading Values – Learn the true worth of fruits, check stock resets, and trade smarter with our updated database!" />
+    <meta name="description" content="Master Blox Fruits trading with the latest fruit values, rarity rankings, and pro tips. Make the most profitable trades today!" />
+    <meta name="description" content="Blox Fruits stock reset countdown & value tracker. Stay ahead of the game with updated trading prices and strategies!" />
+    <meta name="description" content="Avoid bad trades in Blox Fruits! Use our updated trading value list and rarity rankings to get the best deals!" />
+    <meta name="description" content="Blox Fruits trading made easy! Find fruit values, stock reset timers, and trading tips to maximize your profits!" />
+
+    <meta name="keywords" content="Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits best fruits, Roblox trading, fruit values, Blox Fruits tier list, blox fruits value, blox fruit value, robloxfruitvalue, fruit values in blox fruits, blox fruits trading values, blox fruits, bloxfruits, blox fruits trading value, blox fruit, bloxfruit, robloxfruits, blox fruits codes, blox fruits plush, blox fruits memes, blox fruit trading value, fruit value, blox fruits pvp, pvp blox fruits, blox fruits tty, blox fruits updates, bloxfruitstips, blox fruits live, bloxfruitsnews, bloxfruitsmeta, blox fruits perm, blox fruits code" />
     <meta name="author" content="Blox Fruits Values Team" />
 
     <!-- Open Graph (OG) Meta Tags for Social Media -->
     <meta property="og:title" content="Blox Fruits Values & Trading Guide" />
+    <meta property="og:title" content="Best Blox Fruits Trading Values & Price List" />
+    <meta property="og:title" content="Blox Fruits Tier List – Updated Fruit Rankings" />
+    <meta property="og:title" content="How to Trade in Blox Fruits – Complete Guide" />
+    <meta property="og:title" content="Blox Fruits Value List – Get the Best Deals!" />
+    <meta property="og:title" content="Blox Fruits Trading Strategies for Beginners" />
+    <meta property="og:title" content="Rare & Mythical Fruit Values in Blox Fruits" />
+    <meta property="og:title" content="Legendary Fruits Price Guide – Blox Fruits" />
+    <meta property="og:title" content="Blox Fruits Update: New Trading Features & Tips" />
+    <meta property="og:title" content="Top Fruits for PvP & Grinding – Blox Fruits" />
+    <meta property="og:title" content="Best Blox Fruits for Trading & Farming" />
+    <meta property="og:title" content="Blox Fruits: How to Maximize Your Trade Profit" />
+    <meta property="og:title" content="Blox Fruits Codes – Free Rewards & Boosts" />
+    <meta property="og:title" content="Blox Fruits Market Trends – Stay Ahead!" />
+    <meta property="og:title" content="Trading Legendary vs Mythical Fruits – Which Wins?" />
+    <meta property="og:title" content="Perm Fruits in Blox Fruits – Are They Worth It?" />
+    <meta property="og:title" content="How to Get the Best Trades in Blox Fruits" />
+    <meta property="og:title" content="Complete Blox Fruits Trading Value Calculator" />
+    <meta property="og:title" content="Blox Fruits PvP Guide – Best Fruits & Combos" />
+    <meta property="og:title" content="Trading Secrets Every Blox Fruits Player Must Know" />
+    <meta property="og:title" content="Blox Fruits: How to Spot Overpriced Trades" />
+    <meta property="og:title" content="Gamepass Trading – What You Need to Know" />
+    <meta property="og:title" content="Limited & Exclusive Blox Fruits – Value Breakdown" />
+    <meta property="og:title" content="Blox Fruits Trading Tips from Top Players" />
+    <meta property="og:title" content="Stock Reset Countdown – Best Time to Trade" />
+    <meta property="og:title" content="How to Get Rich in Blox Fruits Trading Market" />
+    <meta property="og:title" content="Blox Fruits Meta: What’s Hot & What’s Not?" />
+    <meta property="og:title" content="Blox Fruits Trading Scams – How to Avoid Them" />
+    <meta property="og:title" content="New Blox Fruits Update: Trading System Changes" />
+    <meta property="og:title" content="Blox Fruits Community Market – Trade Like a Pro" />
+    <meta property="og:title" content="Blox Fruits Trading: Tips for Beginners" />    
     <meta property="og:description" content="Get the latest Blox Fruits values, fruit rarity rankings, and trading tips. Maximize your trades and find the best deals!" />
+    <meta property="og:description" content="Discover up-to-date Blox Fruits trading values and tier lists. Learn how to trade like a pro and get the best offers!" />
+    <meta property="og:description" content="Blox Fruits Trading Guide – Check fruit values, rarity, and the latest trading strategies to boost your in-game wealth!" />
+    <meta property="og:description" content="Find the best Blox Fruits trades with our value list. Get accurate fruit rankings and maximize your profit!" />
+    <meta property="og:description" content="Blox Fruits Values – Learn the worth of every fruit and make smart trading decisions in Roblox’s top adventure game!" />
+    <meta property="og:description" content="Stay ahead in Blox Fruits trading with real-time value updates, fruit rankings, and expert tips!" />
+    <meta property="og:description" content="Explore the most accurate Blox Fruits trading values and tier lists. Learn how to spot the best trades today!" />
+    <meta property="og:description" content="Blox Fruits price guide – Find out which fruits are rising in value and how to trade for the best deals!" />
+    <meta property="og:description" content="Master Blox Fruits trading! Get updated values, tier lists, and expert advice to avoid bad deals!" />
+    <meta property="og:description" content="Know the true worth of every fruit in Blox Fruits with our constantly updated trading value list!" />
+    <meta property="og:description" content="Blox Fruits tier list and trading values – Your ultimate guide to making profitable trades and smart investments!" />
+    <meta property="og:description" content="Discover Blox Fruits trading secrets! Get the latest values, tier lists, and strategies for the best deals!" />
+    <meta property="og:description" content="Blox Fruits stock reset countdown & value tracker. Stay ahead of the market with real-time updates!" />
+    <meta property="og:description" content="Find the best trading strategies for Blox Fruits! Get accurate fruit values and rankings to maximize your trades!" />
+    <meta property="og:description" content="Blox Fruits trading made easy! Check our updated value list and trade smarter than ever before!" />
+    <meta property="og:description" content="The ultimate Blox Fruits value tracker! Find out the worth of fruits before you trade and avoid overpaying!" />
+    <meta property="og:description" content="Blox Fruits trading hub – Compare fruit prices, rarity, and best deals in the game!" />
+    <meta property="og:description" content="Learn how to trade like a pro in Blox Fruits! Get updated fruit values and tips for the best trades!" />
+    <meta property="og:description" content="Avoid Blox Fruits trading scams! Learn real fruit values, market trends, and pro trading strategies!" />
+    <meta property="og:description" content="Get the best deals in Blox Fruits trading! Check updated fruit values and trade smarter today!" />
+    <meta property="og:description" content="Blox Fruits trading values & tips – Your guide to making the best trades in Roblox!" />
+    <meta property="og:site_name" content="Blox Fruits Values" />
+    <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="/bloxfruits-banner.jpg" />
     <meta property="og:url" content="https://bloxfruitsvalue.netlify.app/" />
     <meta property="og:type" content="bloxfruitsvalues.com" />
