--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZKX0F5J2W"></script>
     <meta name="google-adsense-account" content="ca-pub-4679619533362780">
     <meta name="google-site-verification" content="RutARC2gS8iAQgjPejBajdoOSI2tNkymLxfpSSqeZro" />
     <meta charset="UTF-8" />
