--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZKX0F5J2W"></script>
+    <head>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4679619533362780"
+          crossorigin="anonymous"></script>
+    </head>  
     <meta name="google-adsense-account" content="ca-pub-4679619533362780">
     <meta name="google-site-verification" content="RutARC2gS8iAQgjPejBajdoOSI2tNkymLxfpSSqeZro" />
     <meta charset="UTF-8" />
@@ -11,7 +13,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Blox Fruits Items" />
     <meta name="mobile-web-app-capable" content="yes" />
-
+    <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-4679619533362780"
+    data-ad-slot="1234567890"
+    data-ad-format="auto"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
     <style>
       img {
