--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="google-adsense-account" content="ca-pub-4679619533362780">
     <meta name="google-site-verification" content="RutARC2gS8iAQgjPejBajdoOSI2tNkymLxfpSSqeZro" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -32,7 +33,33 @@
     <meta name="description" content="Track Blox Fruits stock availability, fruit values, and trading trends on top websites. Never miss a deal with real-time updates!" />
     <meta name="description" content="Blox Fruits trading and stock updates made easy! Get instant access to the top 50 stock websites, trade values, and stock reset countdowns!" />
     
-    <meta name="keywords" content="Blox Fruits stock, Blox Fruits stock websites, Blox Fruits stock tracking, real-time Blox Fruits stock, Blox Fruits stock update, Blox Fruits trading values, Blox Fruits stock reset, best Blox Fruits trading sites, Blox Fruits fruit values, Blox Fruits value calculator, Blox Fruits trade market, Blox Fruits stock reset timer, Blox Fruits value list, Blox Fruits rarity rankings, Blox Fruits stock news, Blox Fruits stock chart, Blox Fruits trading tips, Blox Fruits stock dealers, Blox Fruits stock trends, Blox Fruits best stock tracking sites, blox fruits stock 2024, blox fruits trading websites, best Blox Fruits websites for trading, blox fruits top websites, blox fruits trading values 2024, blox fruits stock updates, blox fruits stock tier list, blox fruits value updates, blox fruits stock price, blox fruits stock monitor, blox fruits stock market, blox fruits value comparison, blox fruits trade deals, blox fruits top 50 stock sites" />
+    <meta name="keywords" content="Blox Fruits stock, bloxfruits fruits,
+    bloxfruits codes,
+    bloxfruits stock,
+    roblox,
+    bloxfruits value,
+    bloxfruits values,
+    bloxfruits code,
+    bloxfruits wiki,
+    blox fruits codes,
+    bloxfruits discord,
+    codes for bloxfruits,
+    discord,
+    bloxfruits scripts,
+    bloxfruits calculator,
+    blox fruits script,
+    blox fruits values,
+    blox fruit codes,
+    blox fruits stock,
+    bfv,
+    redz hub script,
+    blox fruits wiki,
+    bloxfruits trading,
+    bfv,
+    blox fruits values,
+    blox fruits codes,
+    codes for bloxfruits,
+    redz hub script,Blox Fruits stock websites, Blox Fruits stock tracking, real-time Blox Fruits stock, Blox Fruits stock update, Blox Fruits trading values, Blox Fruits stock reset, best Blox Fruits trading sites, Blox Fruits fruit values, Blox Fruits value calculator, Blox Fruits trade market, Blox Fruits stock reset timer, Blox Fruits value list, Blox Fruits rarity rankings, Blox Fruits stock news, Blox Fruits stock chart, Blox Fruits trading tips, Blox Fruits stock dealers, Blox Fruits stock trends, Blox Fruits best stock tracking sites, blox fruits stock 2024, blox fruits trading websites, best Blox Fruits websites for trading, blox fruits top websites, blox fruits trading values 2024, blox fruits stock updates, blox fruits stock tier list, blox fruits value updates, blox fruits stock price, blox fruits stock monitor, blox fruits stock market, blox fruits value comparison, blox fruits trade deals, blox fruits top 50 stock sites" />
     
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Blox Fruits Items, Roblox, Rankings, Blox Fruits Stock Websites" />
