--- a/index.html
+++ b/index.html
@@ -59,6 +59,74 @@
     blox fruits values,
     blox fruits codes,
     codes for bloxfruits,
+    roblox blox fruits,
+    blox fruits,
+    blox fruits values,
+    blox fruits codes,
+    blox fruits stock,
+    blox fruits trading values,
+    blox fruits value calculator,
+    blox fruits stock reset,
+    blox fruits trading tips,
+    blox fruits stock update,
+    blox fruits stock reset timer,
+    blox fruits value list,
+    blox fruits rarity rankings,
+    blox fruits stock news,
+    blox fruits stock chart,
+    blox fruits trading tips,
+    blox fruits stock dealers,
+    blox fruits stock trends,
+    best Blox Fruits trading sites,
+    Blox Fruits fruit values,
+    Blox Fruits value calculator,
+    Blox Fruits trade market,
+    Blox Fruits stock reset timer,
+    Blox Fruits value list,
+    Blox Fruits rarity rankings,
+bloxfruits codes,
+roblox codes,
+roblox script,
+blox fruit,
+bloxfruits script,
+bloxfruits code,
+roblox executor,
+executor,
+blox fruits script,
+roblox download,
+bloxfruits scripts,
+roblox scripts,
+bloxfruit,
+blox fruits codes,
+delta,
+bloxfruits hacks,
+bloxfruits trade,,
+discord,
+codes for bloxfruits,
+bloxfruits discord,
+roblox hacks,
+bloxfruits wiki.
+bloxfruits value,
+RISING,
+delta,
+bloxfruits calculator,
+delta executor,
+blox fruits hacks,
+bloxfruits value,
+blox fruits script,
+blox fruits scripts,
+roblox executor,
+bloxfruits hacks,
+bloxfruits scripts,
+executor,
+roblox scripts,
+roblox hacks,
+bloxfruits script,
+roblox download,
+bloxfruits trade,
+roblox script,
+bloxfruits values,
+bloxfruits stock,
     redz hub script,Blox Fruits stock websites, Blox Fruits stock tracking, real-time Blox Fruits stock, Blox Fruits stock update, Blox Fruits trading values, Blox Fruits stock reset, best Blox Fruits trading sites, Blox Fruits fruit values, Blox Fruits value calculator, Blox Fruits trade market, Blox Fruits stock reset timer, Blox Fruits value list, Blox Fruits rarity rankings, Blox Fruits stock news, Blox Fruits stock chart, Blox Fruits trading tips, Blox Fruits stock dealers, Blox Fruits stock trends, Blox Fruits best stock tracking sites, blox fruits stock 2024, blox fruits trading websites, best Blox Fruits websites for trading, blox fruits top websites, blox fruits trading values 2024, blox fruits stock updates, blox fruits stock tier list, blox fruits value updates, blox fruits stock price, blox fruits stock monitor, blox fruits stock market, blox fruits value comparison, blox fruits trade deals, blox fruits top 50 stock sites" />
     
     <meta name="robots" content="index, follow" />
