--- a/index.html
+++ b/index.html
@@ -162,7 +162,47 @@ bloxfruits stock,
     <meta name="description" content="Avoid bad trades in Blox Fruits! Use our updated trading value list and rarity rankings to get the best deals!" />
     <meta name="description" content="Blox Fruits trading made easy! Find fruit values, stock reset timers, and trading tips to maximize your profits!" />
 
-    <meta name="keywords" content="Roblox,roblox gamepass, Roblox fruits, Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits best fruits, Roblox trading, fruit values,bloxfruitsvalues.com. Blox Fruits tier list, blox fruits value, blox fruit value, robloxfruitvalue, fruit values in blox fruits, blox fruits trading values, blox fruits, bloxfruits, blox fruits trading value, blox fruit, bloxfruit, robloxfruits, blox fruits codes, blox fruits plush, blox fruits memes, blox fruit trading value, fruit value, blox fruits pvp, pvp blox fruits, blox fruits tty, blox fruits updates, bloxfruitstips, blox fruits live, bloxfruitsnews, bloxfruitsmeta, blox fruits perm, blox fruits code, blox fruits weapons, blox fruits legendary, blox fruits mythical, blox fruits stock, blox fruits swords, blox fruits accessories, blox fruits bounty, blox fruits sea events, blox fruits leveling, blox fruits bosses, blox fruits secret, blox fruits glitch, blox fruits spawn locations, blox fruits devil fruits, blox fruits awakenings, blox fruits tier list 2024, blox fruits raid, blox fruits farming, blox fruits farming guide, blox fruits update leaks, blox fruits skills, blox fruits max level, blox fruits private servers, blox fruits new codes, blox fruits robux, blox fruits money making, blox fruits black market, blox fruits permanent fruits, blox fruits admin, blox fruits YouTube, blox fruits tiktok, blox fruits events, blox fruits how to get legendary, blox fruits noob to pro, blox fruits gamepass, blox fruits rare drops, blox fruits legendary swords, blox fruits fighting styles, blox fruits mastery, blox fruits elite hunters, blox fruits sea 4, blox fruits sea 3, blox fruits sea 2, blox fruits best accessories, blox fruits best grinding spots, blox fruits rare fruits, blox fruits fruit bag, blox fruits update countdown, blox fruits trading hub, blox fruits drop rates, blox fruits combos, blox fruits best fighting styles, blox fruits how to get money fast, blox fruits guide for beginners, blox fruits best boss grinding, blox fruits best ship, blox fruits secret locations, blox fruits awakened fruits, blox fruits best pvp players, blox fruits sword tier list, blox fruits crew system, blox fruits best builds" />
+    <meta name="keywords" content="Roblox,roblox gamepass, Roblox fruits,
+    bloxfruits fruits,
+    blox fruits items,
+    blox fruits values,
+    blox fruits trading,
+    blox fruits trading values,
+    blox fruits value calculator,
+    blox fruits stock reset,
+    blox fruits trading tips,
+    blox fruits stock update,
+    blox fruits stock reset timer,
+
+
+    blox fruits value list,
+    blox fruits,
+    bloxfruits codes,
+    bloxfruits script,
+    roblox,
+    bloxfruits value,
+    bloxfruits stock,
+    bloxfruits wiki,
+    code bloxfruits,
+    bloxfruits discord,
+    bloxfruits values,
+    blox fruits codes,
+    bloxfruit,
+    bloxfruits trading,
+    bloxfruits scripts,
+    blox fruits script,
+    bloxfruits calculator,
+    blox fruits values,
+    blox fruit codes,
+    bloxfruits website,
+    blox fruits wiki,
+    bfv,
+    bloxfruits website,
+    blox fruit codes,
+    blox fruits codes,
+    blox fruits wiki,
+    bloxfruits wiki 
+    ,Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits best fruits, Roblox trading, fruit values,bloxfruitsvalues.com. Blox Fruits tier list, blox fruits value, blox fruit value, robloxfruitvalue, fruit values in blox fruits, blox fruits trading values, blox fruits, bloxfruits, blox fruits trading value, blox fruit, bloxfruit, robloxfruits, blox fruits codes, blox fruits plush, blox fruits memes, blox fruit trading value, fruit value, blox fruits pvp, pvp blox fruits, blox fruits tty, blox fruits updates, bloxfruitstips, blox fruits live, bloxfruitsnews, bloxfruitsmeta, blox fruits perm, blox fruits code, blox fruits weapons, blox fruits legendary, blox fruits mythical, blox fruits stock, blox fruits swords, blox fruits accessories, blox fruits bounty, blox fruits sea events, blox fruits leveling, blox fruits bosses, blox fruits secret, blox fruits glitch, blox fruits spawn locations, blox fruits devil fruits, blox fruits awakenings, blox fruits tier list 2024, blox fruits raid, blox fruits farming, blox fruits farming guide, blox fruits update leaks, blox fruits skills, blox fruits max level, blox fruits private servers, blox fruits new codes, blox fruits robux, blox fruits money making, blox fruits black market, blox fruits permanent fruits, blox fruits admin, blox fruits YouTube, blox fruits tiktok, blox fruits events, blox fruits how to get legendary, blox fruits noob to pro, blox fruits gamepass, blox fruits rare drops, blox fruits legendary swords, blox fruits fighting styles, blox fruits mastery, blox fruits elite hunters, blox fruits sea 4, blox fruits sea 3, blox fruits sea 2, blox fruits best accessories, blox fruits best grinding spots, blox fruits rare fruits, blox fruits fruit bag, blox fruits update countdown, blox fruits trading hub, blox fruits drop rates, blox fruits combos, blox fruits best fighting styles, blox fruits how to get money fast, blox fruits guide for beginners, blox fruits best boss grinding, blox fruits best ship, blox fruits secret locations, blox fruits awakened fruits, blox fruits best pvp players, blox fruits sword tier list, blox fruits crew system, blox fruits best builds" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Blox Fruits Items,Roblox,Rankings,robloxfruitvalue," />
 
@@ -233,11 +273,6 @@ bloxfruits stock,
 
 
     <!-- Server Location: Top 100 Richest Countries -->
-     <meta name="geo.region" content="NA, EU, AS, ME, OC, SA, AF" />
-     <meta name="geo.placename" content="United States, Singapore, Luxembourg, Qatar, Ireland, Switzerland, Norway, United Arab Emirates, Hong Kong, Brunei, Denmark, Netherlands, Iceland, Austria, Germany, Australia, Sweden, Belgium, Finland, Canada, France, United Kingdom, Israel, New Zealand, Japan, South Korea, Italy, Spain, Saudi Arabia, Kuwait, Bahrain, Taiwan, Malta, Cyprus, Portugal, Slovenia, Estonia, Czech Republic, Lithuania, Slovakia, Greece, Poland, Hungary, Latvia, Croatia, Oman, Chile, Uruguay, Argentina, Malaysia, Russia, Turkey, China, Thailand, Kazakhstan, Mexico, Brazil, Romania, Bulgaria, South Africa, Costa Rica, Panama, Serbia, Colombia, Vietnam, Peru, India, Philippines, Indonesia, Egypt, Iran, Algeria, Sri Lanka, Ukraine, Morocco, Ecuador, Dominican Republic, Tunisia, Belarus, Jordan, Georgia, Bosnia and Herzegovina, Azerbaijan, Armenia, Lebanon, Paraguay, Bolivia, Mongolia, Guatemala, El Salvador, Honduras, Ghana, Uzbekistan, Kenya, Myanmar, Laos, Ethiopia, Nepal, Bangladesh, Cambodia, Pakistan, Venezuela, Nigeria, Sudan" />
-     <meta name="geo.position" content="37.0902,-95.7129;1.3521,103.8198;49.6117,6.1319;25.2769,51.5200;53.1424,-7.6921;46.8182,8.2275;60.4720,8.4689;25.2769,55.2962;22.3193,114.1694;4.5353,114.7277;56.2639,9.5018;52.1326,5.2913;64.1355,-21.8954;47.5162,14.5501;51.1657,10.4515;-25.2744,133.7751;60.1282,18.6435;50.8503,4.3517;61.9241,25.7482;56.1304,-106.3468;46.6034,1.8883;55.3781,-3.4360;31.0461,34.8516;-40.9006,174.8860;36.2048,138.2529;35.9078,127.7669;41.8719,12.5674;40.4637,-3.7492;23.8859,45.0792;29.3759,47.9774;26.0667,50.5577;23.6978,120.9605;35.8997,14.5146;35.1264,33.4299;39.3999,-8.2245;46.1512,14.9955;58.5953,25.0136;49.8175,15.4729;55.1694,23.8813;48.6690,19.6990;39.0742,21.8243;51.9194,19.1451;47.1625,19.5033;56.8796,24.6032;45.1000,15.2000;21.5126,55.9233;-35.6751,-71.5430;-32.5228,-55.7658;-34.6037,-58.3816;4.2105,101.9758;61.5240,105.3188;38.9637,35.2433;35.8617,104.1954;15.8700,100.9925;48.0196,66.9237;23.6345,-102.5528;-14.2350,-51.9253;45.9432,24.9668;42.7339,25.4858;-30.5595,22.9375;9.7489,-83.7534;8.5379,-80.7821;44.0165,21.0059;4.5709,-74.2973;14.0583,108.2772;-9.1899,-75.0152;20.5937,78.9629;12.8797,121.7740;-0.7893,113.9213;26.8206,30.8025;32.4279,53.6880;28.0339,1.6596;7.8731,80.7718;48.3794,31.1656;31.7917,-7.0926;-1.8312,-78.1834;18.7357,-70.1627;33.8869,9.5375;53.9006,27.5590;30.5852,36.2384;42.3154,43.3569;43.9159,17.6791;40.1431,47.5769;40.0691,45.0382;33.8547,35.8623;-23.4425,-58.4438;-16.2902,-63.5887;46.8625,103.8467;15.7835,-90.2308;13.7942,-88.8965;15.1997,-86.2419;7.9465,-1.0232;41.3775,64.5853;-1.2921,36.8219;21.9162,95.9560;19.8563,102.4955;9.1450,40.4897;28.3949,84.1240;23.6850,90.3563;12.5657,104.9910;30.3753,69.3451;6.4238,-66.5897;9.0820,8.6753;12.8628,30.2176" />
-     <meta name="ICBM" content="37.0902,-95.7129" />
-     <meta name="robots" content="index, follow">
      <meta name="description" content="Stay updated with the most powerful Blox Fruits stock websites and trading values. Get real-time stock reset times, rarity rankings, and the best deals in trading!" />
      <meta name="description" content="Discover the top 200 Blox Fruits stock websites, perfect trading values, and expert trade strategies. Maximize your in-game profits with powerful trading tips!" />
      <meta name="description" content="Find the best Blox Fruits stock tracking websites! Get real-time stock updates, trade calculators, and rarity rankings to make perfect trades every time." />
