--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- Title (concise, keyword-rich) -->
-    <title>Blox Fruits Values - Trading Guide & Stock Updates</title>
+    <title>Blox Fruits Values </title>
 
     <!-- Single, Strong Description (150-160 characters) -->
     <meta name="description" content="Master Blox Fruits trading with real-time stock updates, accurate fruit values, rarity rankings, and expert tips. Maximize profits now!" />
@@ -188,15 +188,7 @@
     </style>
 
     <!-- AdSense Script (async for performance) -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4679619533362780" crossorigin="anonymous"></script>
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-4679619533362780"
-         data-ad-slot="1234567890"
-         data-ad-format="auto"></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+   
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
