--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- Title (concise, keyword-rich) -->
-    <title>Blox Fruits Values </title>
+    <title>Blox Fruit Values</title>
 
     <!-- Single, Strong Description (150-160 characters) -->
-    <meta name="description" content="Master Blox Fruits trading with real-time stock updates, accurate fruit values, rarity rankings, and expert tips. Maximize profits now!" />
+    <meta name="description" content="The most trusted values list for Blox Fruits. Blox Fruits Values NEW! Check out our trade calculator!" />
 
     <!-- Consolidated, Targeted Keywords -->
     <meta name="keywords" content="Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits stock, Blox Fruits trading values, Blox Fruits value calculator, Blox Fruits stock reset, Blox Fruits rarity rankings, Blox Fruits trading tips, Blox Fruits stock update, Blox Fruits value list, Roblox, blox fruits codes, blox fruits wiki, blox fruits discord, blox fruits tier list, blox fruits stock 2024, blox fruits trading websites" />
-
+    <meta name="keywords" content="Blox Fruits stock, bloxfruits fruits,bloxfruits codes,bloxfruits stock,roblox,bloxfruits value,bloxfruits values,bloxfruits code,bloxfruits wiki,blox fruits codes,bloxfruits discord,codes for bloxfruits,discord,bloxfruits scripts,bloxfruits calculator,blox fruits script,blox fruits values,blox fruit codes,blox fruits stock,redz hub script,blox fruits wiki,bloxfruits trading,bfv,blox fruits values,blox fruits codes,codes for bloxfruits,roblox blox fruits,blox fruits,blox fruits values,blox fruits codes,blox fruits stock,blox fruits trading values,blox fruits value calculator,blox fruits stock reset,blox fruits trading tips,blox fruits stock update,blox fruits stock reset timer,blox fruits value list,blox fruits rarity rankings,blox fruits stock news,blox fruits stock chart,blox fruits trading tips,blox fruits stock dealers,blox fruits stock trends,best Blox Fruits trading sites,Blox Fruits fruit values,Blox Fruits value calculator,Blox Fruits trade market,Blox Fruits stock reset timer,Blox Fruits value list,Blox Fruits rarity rankings,bloxfruits codes,roblox codes,roblox script,blox fruit,bloxfruits script,bloxfruits code,roblox executor,blox fruits script,roblox download,bloxfruits scripts,roblox scripts,bloxfruit,blox fruits codes,delta,bloxfruits hacks,bloxfruits trade,discord,codes for bloxfruits,bloxfruits discord,roblox hacks,bloxfruits wiki,bloxfruits value,RISING,delta,bloxfruits calculator,delta executor,blox fruits hacks,bloxfruits value,blox fruits script,blox fruits scripts,roblox executor"/>
+   
     <!-- Author and Robots -->
     <meta name="author" content="Blox Fruits Items" />
     <meta name="robots" content="index, follow" />
@@ -42,140 +43,20 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Blox Fruits Values" />
     <meta property="og:locale" content="en_US" />
-     <meta name="keywords" content="Blox Fruits stock, bloxfruits fruits,bloxfruits codes,
-    bloxfruits stock,
-    roblox,
-    bloxfruits value,
-    bloxfruits values,
-    bloxfruits code,
-    bloxfruits wiki,
-    blox fruits codes,
-    bloxfruits discord,
-    codes for bloxfruits,
-    discord,
-    bloxfruits scripts,
-    bloxfruits calculator,
-    blox fruits script,
-    blox fruits values,
-    blox fruit codes,
-    blox fruits stock,
-    bfv,
-    redz hub script,
-    blox fruits wiki,
-    bloxfruits trading,
-    bfv,
-    blox fruits values,
-    blox fruits codes,
-    codes for bloxfruits,
-    roblox blox fruits,
-    blox fruits,
-    blox fruits values,
-    blox fruits codes,
-    blox fruits stock,
-    blox fruits trading values,
-    blox fruits value calculator,
-    blox fruits stock reset,
-    blox fruits trading tips,
-    blox fruits stock update,
-    blox fruits stock reset timer,
-    blox fruits value list,
-    blox fruits rarity rankings,
-    blox fruits stock news,
-    blox fruits stock chart,
-    blox fruits trading tips,
-    blox fruits stock dealers,
-    blox fruits stock trends,
-    best Blox Fruits trading sites,
-    Blox Fruits fruit values,
-    Blox Fruits value calculator,
-    Blox Fruits trade market,
-    Blox Fruits stock reset timer,
-    Blox Fruits value list,
-    Blox Fruits rarity rankings,
-    bloxfruits codes,
-    roblox codes,
-    roblox script,
-    blox fruit,
-    bloxfruits script,
-    bloxfruits code,
-    roblox executor,
-    executor,
-    blox fruits script,
-    roblox download,
-    bloxfruits scripts,
-    roblox scripts,
-    bloxfruit,
-    blox fruits codes,
-    delta,
-    bloxfruits hacks,
-    bloxfruits trade,,
-    discord,
-    codes for bloxfruits,
-    bloxfruits discord,
-    roblox hacks,
-    bloxfruits wiki.
-    bloxfruits value,
-    RISING,
-    delta,
-    bloxfruits calculator,
-    delta executor,
-    blox fruits hacks,
-    bloxfruits value,
-    blox fruits script,
-    blox fruits scripts,
-    roblox executor"/>
+    <meta name="keywords" content="Blox Fruits stock, bloxfruits fruits,bloxfruits codes,bloxfruits stock,roblox,bloxfruits value,bloxfruits values,bloxfruits code,bloxfruits wiki,blox fruits codes,bloxfruits discord,codes for bloxfruits,discord,bloxfruits scripts,bloxfruits calculator,blox fruits script,blox fruits values,blox fruit codes,blox fruits stock,redz hub script,blox fruits wiki,bloxfruits trading,bfv,blox fruits values,blox fruits codes,codes for bloxfruits,roblox blox fruits,blox fruits,blox fruits values,blox fruits codes,blox fruits stock,blox fruits trading values,blox fruits value calculator,blox fruits stock reset,blox fruits trading tips,blox fruits stock update,blox fruits stock reset timer,blox fruits value list,blox fruits rarity rankings,blox fruits stock news,blox fruits stock chart,blox fruits trading tips,blox fruits stock dealers,blox fruits stock trends,best Blox Fruits trading sites,Blox Fruits fruit values,Blox Fruits value calculator,Blox Fruits trade market,Blox Fruits stock reset timer,Blox Fruits value list,Blox Fruits rarity rankings,bloxfruits codes,roblox codes,roblox script,blox fruit,bloxfruits script,bloxfruits code,roblox executor,blox fruits script,roblox download,bloxfruits scripts,roblox scripts,bloxfruit,blox fruits codes,delta,bloxfruits hacks,bloxfruits trade,discord,codes for bloxfruits,bloxfruits discord,roblox hacks,bloxfruits wiki,bloxfruits value,RISING,delta,bloxfruits calculator,delta executor,blox fruits hacks,bloxfruits value,blox fruits script,blox fruits scripts,roblox executor"/>
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Blox Fruits Values & Trading Tips" />
     <meta name="twitter:description" content="Stay ahead with Blox Fruits stock updates, fruit values, and trading strategies. Never miss a deal!" />
     <meta name="twitter:image" content="/bloxfruits-banner.jpg" />
-    <meta name="keywords" content="Roblox,roblox gamepass, Roblox fruits,
-    bloxfruits fruits,
-    blox fruits items,
-    blox fruits values,
-    blox fruits trading,
-    blox fruits trading values,
-    blox fruits value calculator,
-    blox fruits stock reset,
-    blox fruits trading tips,
-    blox fruits stock update,
-    blox fruits stock reset timer,
-
-
-    blox fruits value list,
-    blox fruits,
-    bloxfruits codes,
-    bloxfruits script,
-    roblox,
-    bloxfruits value,
-    bloxfruits stock,
-    bloxfruits wiki,
-    code bloxfruits,
-    bloxfruits discord,
-    bloxfruits values,
-    blox fruits codes,
-    bloxfruit,
-    bloxfruits trading,
-    bloxfruits scripts,
-    blox fruits script,
-    bloxfruits calculator,
-    blox fruits values,
-    blox fruit codes,
-    bloxfruits website,
-    blox fruits wiki,
-    bfv,
-    bloxfruits website,
-    blox fruit codes,
-    blox fruits codes,
-    blox fruits wiki,
-    bloxfruits wiki "/>
+    <meta name="keywords" content="Roblox,roblox gamepass, Roblox fruits,bloxfruits fruits,blox fruits items,blox fruits values,blox fruits trading,blox fruits trading values,blox fruits value calculator,blox fruits stock reset,blox fruits trading tips,blox fruits stock update,blox fruits stock reset timer,blox fruits value list,blox fruits,bloxfruits codes,bloxfruits script,roblox,bloxfruits value,bloxfruits stock,bloxfruits wiki,code bloxfruits,bloxfruits discord,bloxfruits values,blox fruits codes,bloxfruit,bloxfruits trading,bloxfruits scripts,blox fruits script,bloxfruits calculator,blox fruits values,blox fruit codes,bloxfruits website,blox fruits wiki,bfv,bloxfruits website,blox fruit codes,blox fruits codes,blox fruits wiki,bloxfruits wiki "/>
     <!-- Google AdSense and Verification -->
     <meta name="google-adsense-account" content="ca-pub-4679619533362780" />
     <meta name="google-site-verification" content="RutARC2gS8iAQgjPejBajdoOSI2tNkymLxfpSSqeZro" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Blox Fruits Items,Roblox,Rankings,robloxfruitvalue," />
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://bloxfruitsvalues.com/" />
+    <link rel="canonical" href="https://bloxfruitsitems.com/" />
 
     <!-- Inline CSS -->
     <style>
@@ -197,7 +78,7 @@
         "@type": "WebSite",
         "name": "Blox Fruits Values",
         "url": "https://bloxfruitsvalues.com/",
-        "description": "Your ultimate guide to Blox Fruits trading values, stock updates, and rarity rankings.",
+        "description": "The most trusted values list for Blox Fruits. Blox Fruits Values NEW! Check out our trade calculator!",
         "potentialAction": {
           "@type": "SearchAction",
           "target": "https://bloxfruitsvalues.com/search?q={search_term_string}",
