--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-adsense-account" content="ca-pub-4679619533362780">
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +9,7 @@
 
     <!-- Title (concise, keyword-rich) -->
     <title>Blox Fruit Values</title>
-
+    
     <!-- Single, Strong Description (150-160 characters) -->
     <meta name="description" content="The most trusted values list for Blox Fruits. Blox Fruits Values NEW! Check out our trade calculator!" />
 
