--- a/index.html
+++ b/index.html
@@ -67,20 +67,34 @@
    
 
     <!-- Structured Data (JSON-LD) -->
-   <script type="application/ld+json">
-      {
+      <script type="application/ld+json">
+        {
+  
         "@context": "https://schema.org",
         "@type": "WebSite",
+
         "name": "Blox Fruits Values",
         "url": "https://bloxfruitsitems.com/",
-        "description": "Live Blox Fruits Values 2025 with updated tier lists, trading guides, and calculators for Roblox players.",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://bloxfruitsvalues.com/search?q={search_term_string}",
-          "query-input": "required name=search_term_string"
+        "description": "The most accurate and updated values list for Blox Fruits. Discover trading tiers, fruit rankings, and our exclusive trade calculator.",
+
+        "inLanguage": "en",
+        "publisher": {
+        "@type": "Organization",
+        "name": "Blox Fruits Values",
+        "url": "https://bloxfruitsitems.com/",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://bloxfruitsitems.com/logo.png"
         }
-      }
-    </script>
+        },
+        "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://bloxfruitsitems.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+        }
+        }
+      </script>
+
           <!-- Header Tags with Keywords -->
       <h1>Blox Fruits Values [2025] – Ultimate Trading Resource</h1>
       <h2>Blox Fruits Values 2025: Updated Tier List</h2>
@@ -102,7 +116,6 @@
       <p>Maximize your trades with our <strong>Blox Fruits trading guide</strong>. Learn how to use <strong>Blox Fruits Values</strong> to negotiate better deals. Visit our <a href="/tips">trading tips page</a> for more.</p>
 
       <h2>Image Optimization</h2>
-      <img src="/bloxfruits-chart.jpg" alt="Blox Fruits value chart 2025" />
 
       <!-- Expandable Section for 2000 Words -->
       <p>[Add 1900 more words here, repeating and expanding on Blox Fruits Values, trading strategies, tier lists, and calculator usage. Include keywords naturally every 50-100 words. Example: "The Blox Fruits Values 2025 list is essential for traders. With Blox Fruits trading values fluctuating, our Blox Fruits value calculator helps. Explore Blox Fruits Values for each fruit..."]</p>
