--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- Title (concise, keyword-rich) -->
-    <title><h1>Blox Fruits Values<h1/></title>
+    <title>Blox Fruits Values</title>
     
     <!-- Single, Strong Description (150-160 characters) -->
     <meta name="description" content="The most trusted value list for Blox Fruits. Blox Fruits Values NEW! Check out our trade calculator!" />
