--- a/index.html
+++ b/index.html
@@ -67,33 +67,21 @@
    
 
     <!-- Structured Data (JSON-LD) -->
-      <script type="application/ld+json">
-        {
-  
-        "@context": "https://schema.org",
-        "@type": "WebSite",
+    <script type="application/ld+json">
+      {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Dark Blade",
+      "image": "https://bloxfruitsitems.com/images/dark-blade.png",
+      "description": "The Dark Blade is one of the strongest swords in Blox Fruits.",
+      "sku": "dark-blade",
+      "brand": {
+      "@type": "Brand",
+      "name": "Blox Fruits"
+      }
+      }
+    </script>
 
-        "name": "Blox Fruits Values",
-        "url": "https://bloxfruitsitems.com/",
-        "description": "The most accurate and updated values list for Blox Fruits. Discover trading tiers, fruit rankings, and our exclusive trade calculator.",
-
-        "inLanguage": "en",
-        "publisher": {
-        "@type": "Organization",
-        "name": "Blox Fruits Values",
-        "url": "https://bloxfruitsitems.com/",
-        "logo": {
-        "@type": "ImageObject",
-        "url": "https://bloxfruitsitems.com/logo.png"
-        }
-        },
-        "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://bloxfruitsitems.com/search?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-        }
-        }
-      </script>
 
           <!-- Header Tags with Keywords -->
       
