--- a/index.html
+++ b/index.html
@@ -67,20 +67,24 @@
    
 
     <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
-      {
-      "@context": "https://schema.org",
-      "@type": "Product",
-      "name": "Dark Blade",
-      "image": "https://bloxfruitsitems.com/images/dark-blade.png",
-      "description": "The Dark Blade is one of the strongest swords in Blox Fruits.",
-      "sku": "dark-blade",
-      "brand": {
-      "@type": "Brand",
-      "name": "Blox Fruits"
-      }
-      }
-    </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Blox Fruits Items",
+  "url": "https://bloxfruitsitems.com/",
+  "description": "Explore all Blox Fruits items, swords, fruits, accessories, and more in one place.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Blox Fruits Items"
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://bloxfruitsitems.com/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 
 
           <!-- Header Tags with Keywords -->
